# rexglue-sdk

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-linux-aarch64.yaml  build-linux-aarch64.yml  build-win-arm64.yaml  lint.yaml
cmake/: rexglueConfig.cmake.in  rexglue_helpers.cmake  rexglue_install.cmake
include/rex/: hook.h  platform.h  ppc.h  rex_app.h  runtime.h  version.h.in
include/rex/audio/: audio_system.h
include/rex/audio/xma/: context.h
include/rex/chrono/: chrono.h
include/rex/codegen/: codegen_context.h  config.h  function_graph.h  output.h  test_support.h
include/rex/graphics/: primitive_processor.h
include/rex/graphics/d3d12/: command_processor.h
include/rex/input/: input_system.h
include/rex/input/mnk/: mnk_input_driver.h
include/rex/input/sdl/: sdl_input_driver.h
include/rex/kernel/crt/: heap.h
include/rex/logging/: api.h  macros.h  types.h
include/rex/ppc/: context.h  function.h  intrinsics.h  memory.h
include/rex/runtime/: mmio_handler.h
include/rex/runtime/guest/: memory.h
include/rex/system/: kernel_module.h  kernel_state.h  processor.h  xevent.h  xfile.h  xmemory.h  xthread.h  xtimer.h  xtypes.h
include/rex/system/util/: object_table.h
include/rex/system/xam/: content_manager.h
include/rex/ui/: flags.h  presenter.h  windowed_app.h
include/rex/ui/d3d12/: d3d12_presenter.h
include/rex/ui/overlay/: console_overlay.h
resources/templates/codegen/: sources_cmake.inja
resources/templates/init/: cmake_presets.inja  cmakelists.inja
src/audio/: audio_system.cpp  xma_context.cpp  xma_decoder.cpp
src/audio/sdl/: sdl_audio_driver.cpp
src/codegen/: CMakeLists.txt  analyze.cpp  builders.h  codegen_context.cpp  codegen_flags.cpp  codegen_flags.h  codegen_logging.h  codegen_writer.cpp  config.cpp  discovery.cpp  discovery.h  function_graph.cpp  function_scanner.cpp  instruction_dispatch.cpp  output.cpp  phase_discover.cpp  recompiler.cpp  test_support.cpp
src/codegen/builders/: arithmetic.cpp  comparison.cpp  context.cpp  control_flow.cpp  floating_point.cpp  helpers.h  logical.cpp  memory.cpp  system.cpp  vector.cpp
src/core/: CMakeLists.txt  exception_handler_win.cpp  logging.cpp  math_gcc.cpp  threading_posix.cpp
src/filesystem/: vfs_dump.cpp
src/filesystem/devices/: disc_image_file.cpp  host_path_file.cpp  null_file.cpp  stfs_container_file.cpp
src/graphics/: CMakeLists.txt  command_processor.cpp  graphics_system.cpp  primitive_processor.cpp
src/graphics/d3d12/: command_processor.cpp  pipeline_cache.cpp  render_target_cache.cpp  texture_cache.cpp
src/graphics/pipeline/render_target/: cache.cpp
src/graphics/pipeline/shader/: dxbc_translator.cpp  dxbc_translator_fetch.cpp  spirv_translator.cpp  spirv_translator_fetch.cpp
src/graphics/pipeline/texture/: cache.cpp
src/graphics/util/: draw.cpp
src/graphics/vulkan/: command_processor.cpp  pipeline_cache.cpp  render_target_cache.cpp  texture_cache.cpp
src/input/: input_system.cpp
src/input/mnk/: mnk_input_driver.cpp
src/input/sdl/: sdl_input_driver.cpp
src/kernel/: CMakeLists.txt
src/kernel/crt/: file.cpp  heap.cpp
src/kernel/xam/: xam_content.cpp  xam_content_aggregate.cpp  xam_content_device.cpp  xam_enum.cpp  xam_info.cpp  xam_input.cpp  xam_locale.cpp  xam_misc.cpp  xam_msg.cpp  xam_net.cpp  xam_notify.cpp  xam_nui.cpp  xam_task.cpp  xam_ui.cpp  xam_user.cpp
src/kernel/xboxkrnl/: xboxkrnl_audio.cpp  xboxkrnl_audio_xma.cpp  xboxkrnl_crypt.cpp  xboxkrnl_debug.cpp  xboxkrnl_io.cpp  xboxkrnl_io_info.cpp  xboxkrnl_memory.cpp  xboxkrnl_module.cpp  xboxkrnl_modules.cpp  xboxkrnl_ob.cpp  xboxkrnl_rtl.cpp  xboxkrnl_threading.cpp  xboxkrnl_video.cpp  xboxkrnl_xconfig.cpp
src/rexglue/: main.cpp
src/rexglue/commands/: init_command.cpp  migrate_command.cpp  template_utils.h
src/runtime/: mmio_handler.cpp
src/system/: CMakeLists.txt  function_dispatcher.cpp  kernel_module.cpp  kernel_state.cpp  mmio_handler.cpp  ppc_types.cpp  processor.cpp  runtime.cpp  user_module.cpp  xevent.cpp  xmemory.cpp  xthread.cpp
src/system/xam/: content_manager.cpp
src/ui/: CMakeLists.txt  presenter.cpp  rex_app.cpp  window.cpp  window_win.cpp  windowed_app_main_win.cpp
src/ui/d3d12/: d3d12_presenter.cpp  d3d12_provider.cpp
src/ui/overlay/: console_overlay.cpp
src/ui/vulkan/: vulkan_instance.cpp  vulkan_presenter.cpp  vulkan_provider.cpp
tests/ppc/: CMakeLists.txt
tests/unit/: CMakeLists.txt
